--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+*, ::before, ::after {
+    box-sizing: border-box;
+    outline: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+    scroll-behavior: smooth;
+}
+
+html, body {
+    min-height: 100vh;
+    width: 100vw;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
+    background-color: #E4EDE3;
+    overflow-x: hidden;
+    padding-bottom: 24px;
+}
+
+.container-padding {
+    padding-left: calc((100% - var(--largura-padrao)) / 2);
+    padding-right: calc((100% - var(--largura-padrao)) / 2);
+
+    @media (max-width: 1200px) {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+main.flex {
+    align-items: stretch;
 }
